[ozone/wayland] Fix event routing issue when multiple windows are open

Currently ozone wayland implementation uses singletons for bridging
wayland input objects (e.g: WaylandPointer, WaylandKeyboard, WaylandTouch),
each of them inject events into chromium event system. Additionally
they are currently responsible for controlling implicit_grab flag stored
on WaylandWindow instances.
This particular issue happens when new windows are created and the user
tries to trigger any action in browser UI (e.g: create new tab) of the
newly created window, what is currently leading to actions to be taken in
the wrong window (e.g: the new tab is open in the wrong window).
Under the hood, the bug happens because the implicit_grab flag
is not correctly unset for the window that lost focus. So the fix
consists on properly unsetting it on WaylandPointer.

Bug: 921009
Change-Id: I25092fa211849f0345895b88681eaded52f09792
Reviewed-on: https://chromium-review.googlesource.com/c/1407011
Reviewed-by: Maksim Sisov <msisov@igalia.com>
Commit-Queue: Nick Yamane <nickdiego@igalia.com>
Cr-Commit-Position: refs/heads/master@{#622459}
Former-commit-id: 8c23e17dd76dcf3d2e145f2ad001f0b32955e157